View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025000 | Open CASCADE | OCCT:Foundation Classes | public | 2014-06-10 17:07 | 2014-11-11 12:59 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025000: Missing implementation of method NCollection_SparseArrayBase::changeValue() | ||||
Description | Method NCollection_SparseArrayBase::changeValue() is declared but not implemented; because of that attempt to use method NCollection_SparseArray::ChangeValue() leads to linker error | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
As a complement, STL-compatible iterators can be added to SparseArray class along with fix for that problem. |
|
Method changeValue() as it was declared (adding new item if not present) is not necessary -- it would require empty constructor of the item, which is not required now. It would also contradict with same method in DataMap. Thus the solution is to remove this method and redirect ChangeFind() to ChangeValue() |
|
Branch CR25000 has been created by abv. SHA-1: a8dd8e9e2f26aee04a15e099326c1904c59eac2d No new revisions were added by this update. |
|
Branch CR25000 has been deleted by inv. SHA-1: a8dd8e9e2f26aee04a15e099326c1904c59eac2d |
occt: master 8e8070c4 2014-09-26 08:45:41
Committer: bugmaster Details Diff |
0025000: Missing implementation of method NCollection_SparseArrayBase::changeValue() Method changeValue() removed from NCollection_SparseArrayBase, ChangeValue() of NCollection_SparseArray is used instead |
Affected Issues 0025000 |
|
mod - src/NCollection/NCollection_SparseArray.hxx | Diff File | ||
mod - src/NCollection/NCollection_SparseArrayBase.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-06-10 17:07 |
|
New Issue | |
2014-06-10 17:07 |
|
Assigned To | => abv |
2014-06-11 11:06 |
|
Note Added: 0029766 | |
2014-09-26 12:37 |
|
Note Added: 0032219 | |
2014-09-26 13:11 | git | Note Added: 0032221 | |
2014-09-29 15:31 | bugmaster | Changeset attached | => occt master 8e8070c4 |
2014-09-29 15:31 | bugmaster | Assigned To | abv => bugmaster |
2014-09-29 15:31 | bugmaster | Status | new => verified |
2014-09-29 15:31 | bugmaster | Resolution | open => fixed |
2014-09-30 11:35 | git | Note Added: 0032408 | |
2014-11-11 12:44 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:59 |
|
Status | verified => closed |